# example-app

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  ct.yaml
.github/workflows/: ci.yaml
example-service/: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml  grafana-datasources.yaml  loki.yaml  prometheus.yaml
example-service/chart/example-service/: Chart.yaml  README.md  values.yaml
example-service/chart/example-service/templates/: NOTES.txt  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  servicemonitor.yaml
example-service/chart/example-service/templates/tests/: test-connection.yaml
example-service/docs/interfaces/: Test interface.http  http-client.env.json
example-service/proto/: word.proto
example-service/src/: core.rs  main.rs
example-service/src/clients/: amqp.rs  grpc.rs  mod.rs
example-service/src/interfaces/: amqp.rs  grpc.rs  http.rs  mod.rs
example-service/src/stores/: hashmap.rs  mod.rs
infra/: .gitignore  example-app.tf  harbor.tf  main.tf  variables.tf  versions.tf
infra/prod/: .terraform.lock.hcl  example-app.tf  harbor.tf  main.tf  variables.tf  versions.tf
infra/prod/dockerfiles/: Dockerfile.pre-commits
infra/prod/kustomize/: kustomization.yaml
infra/prod/kustomize/argocd/: example-app-repo.sealedsecret.yaml  gitops.yaml  harbor-repo.sealedsecret.yaml  kustomization.yaml  project.yaml
infra/prod/kustomize/chart-testing/: docker-repo.sealedsecret.yaml  kustomization.yaml  namespace.yaml  role.yaml  rolebinding.yaml
infra/prod/kustomize/example-app/: app-1.yaml  app-2.yaml  app-3.yaml  app-4.yaml  app-5.yaml  docker-repo.sealedsecret.yaml  kustomization.yaml
infra/prod/kustomize/harbor/: application.yaml  kustomization.yaml  namespace.yaml
infra/prod/kustomize/open-telemetry/: jaeger-collector.yaml  jaeger-database.yaml  kustomization.yaml
infra/prod/kustomize/tekton/: cleanup-runs.yaml  docker-repo.sealedsecret.yaml  example-app-repo.sealedsecret.yaml  ingress.yaml  kustomization.yaml  namespace.patch.yaml
infra/prod/kustomize/tekton/pipelines/: ci.yaml  cosign.sealedsecret.yaml  docker-repo.sealedsecret.yaml  helm-repo.sealedsecret.yaml  kustomization.yaml
infra/prod/kustomize/tekton/tasks/: artifact-sign.yaml  chart-testing.yaml  commit-changes.yaml  example-app-bump-version.yaml  helm-publish.yaml  kustomization.yaml  pre-commits.yaml
infra/prod/kustomize/tekton/triggers/: kustomization.yaml
infra/prod/kustomize/tekton/triggers/example-app/: chart-testing-sa.yaml  cluster-role-binding.yaml  ingress.yaml  kustomization.yaml  role-binding.yaml  service-account.yaml  trigger-template.yaml  webhook.sealedsecret.yaml
infra/prod/kustomize/tekton/triggers/example-app/on-push/: event-listener.yaml  kustomization.yaml  trigger-binding.yaml
infra/prod/templates/: example-service.values.yaml  harbor.values.yaml
infra/prod/terraform/: .terraform.lock.hcl  dns.tf  variables.tf  versions.tf
infra/templates/: harbor.values.yaml
infra/test/: main.tf  monitoring.tf  variables.tf  versions.tf
