[package]
name = "example-service"
version = "0.1.0-rc26"
edition = "2021"

[dependencies]
axum = { version = "0.8.1" }
metrics = { version = "0.24.2" }
axum-metrics = { version = "0.2.0" }
metrics-exporter-prometheus = { version = "0.17.0" }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.97" }
rand = { version = "0.9.0" }
tonic = { version = "0.12.3" }
prost = { version = "0.13.5" }
config = { version = "0.15.11" }
async-recursion = { version = "1.1.1" }

[build-dependencies]
tonic-build = { version = "0.12.3" }
